--- a/BoardGamesShop/Storyboards/Base.lproj/Main.storyboard
+++ b/BoardGamesShop/Storyboards/Base.lproj/Main.storyboard
@@ -444,7 +444,7 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Y8h-Vq-im3">
                                                 <rect key="frame" x="20" y="208.33333333333334" width="374" height="114.33333333333334"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LlX-Sh-0z9">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LlX-Sh-0z9">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="31"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                         <state key="normal" title="Купить"/>
